WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59422
Fix OwnPtr strict error in ImageBuffer.h
https://bugs.webkit.org/show_bug.cgi?id=59422
Summary
Fix OwnPtr strict error in ImageBuffer.h
David Levin
Reported
2011-04-25 23:19:13 PDT
Fix OwnPtr strict error in ImageBuffer.h
Attachments
Patch
(1.29 KB, patch)
2011-04-25 23:19 PDT
,
David Levin
abarth
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Levin
Comment 1
2011-04-25 23:19:36 PDT
Created
attachment 91065
[details]
Patch
David Levin
Comment 2
2011-04-25 23:32:38 PDT
Committed as
http://trac.webkit.org/changeset/84884
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug