Fix OwnPtr strict error in ImageBuffer.h https://bugs.webkit.org/show_bug.cgi?id=59422

Reviewed by Adam Barth.

* platform/graphics/ImageBuffer.h:
(WebCore::ImageBuffer::create):

Canonical link: https://commits.webkit.org/74606@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84884 268f45cc-cd09-0410-ab3c-d52691b4dbfc